--- a/INVENTORY/css/login.css
+++ b/INVENTORY/css/login.css
@@ -1,5 +1,5 @@
 body#login{
-    background: url('../images/Sparkle.png') no-repeat center center fixed;
+    background: url('../images/wallp.jpg') no-repeat center center fixed;
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -14,15 +14,21 @@ div.loginHeader{
     padding: 50px;
 }
 
+.alignLeft{
+    text-align: left;
+}
+
 div.loginHeader{
     margin-bottom: 60px;
 }
 
 
+/*
 .logo img {
     width: 70px; 
     height: 70px; 
 }
+*/
 
 div.loginHeader h1{
     font-size: 100px;
@@ -405,32 +411,37 @@ div.dashboard_sidebar_user span{
 
 ul.dashboard_menu_lists{
     padding: 0px;
-    margin-top: 15px;   
+    margin-top: 18px;   
 }
 
-ul.dashboard_menu_lists li{
-    padding: 15px 25px;
+ul.dashboard_menu_lists li.liMainMenu{
+    padding: 15px 0px;
     text-transform: uppercase;
 }
 
+/*
 ul.dashboard_menu_lists li.menuActive{
     background: #1B92C2;
     color: #fff;
 }
+*/
 
-ul.dashboard_menu_lists li a{
+ul.dashboard_menu_lists li.liMainMenu a {
     text-decoration: none;
     color: #fff;
     display: inline-block;
-    font-size: 20px;
-    margin-right: 10px;
-    display: inline-flex; 
+    font-size: 22px;
+    display: inline-flex;
     align-items: center;
+    padding-bottom: 10px;
 }
 
-ul.dashboard_menu_lists li a i{
-    font-size: 20px;
+ul.dashboard_menu_lists li.liMainMenu a i{
+    font-size: 25px;
     margin-right: 20px;
+    width: 40px;
+    padding-left: 15px;
+    color: floralwhite;
 }
 
 ul.dashboard_menu_lists li:hover{
@@ -462,6 +473,11 @@ div.dashboard_content_main{
     background: #fff;
     min-height: 800px;
     height: 100%;
+    padding-left: 20px;
+    border: 1px solid #ECEDFF;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-bottom: 25px;
 }
 
 div#errorMessage{
@@ -602,51 +618,338 @@ p.userCount{
     padding-bottom: 15px;
 }
 
+a.subMenuLink{
+    padding-top: 10px !important;
+    padding-bottom: 10px !important;
+    text-transform: none;
+    font-size: 20px !important;
+}
+
+a.subMenuLink i{
+    font-size: 10px;
+    width: 30px !important;
+}
 
 
+ul.subMenus{
+    background: #DE84AE;
+    list-style: none;
+    display: none;
+    margin-bottom: -15px;
+
+}
+
+.liMainMenu i.mainMenuIconArrow {
+    float: right;
+    font-size: 18px !important;
+    margin-bottom: 1px;
+}
+
+.productTextAreaInput{
+    width: 100%;
+    height: 100%;
+    border: 1px solid #d6d7da;
+    border-radius: 5px;
+}
+
+/* Styling for the search bar and header */
+.section_header_search {
+    margin-bottom: 20px;
+}
+
+#searchForm {
+    display: flex;
+    align-items: center;
+}
+
+.searchInputContainer {
+    margin-right: 10px;
+}
+
+.searchBar {
+    font-size: 15px;
+    margin: 0;
+    padding-bottom: 10px;
+}
+
+#machineNameInput,
+#descriptionInput {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 200px;
+}
+
+#machineNameInput::placeholder,
+#descriptionInput::placeholder {
+    color: #999;
+}
+
+#machineNameInput:focus,
+#descriptionInput:focus {
+    outline: none;
+    border-color: #66afe9;
+}
+
+#searchForm button {
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#searchForm button:hover {
+    background-color: #0056b3;
+}
 
 
+/* Optional styling for the table and user count */
+.users {
+    margin-top: 20px;
+}
 
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
 
+table, th, td {
+    border: 1px solid #ccc;
+}
 
+th, td {
+    padding: 8px;
+    text-align: left;
+}
 
+.userCount {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #888;
+}
 
+#suppliersSelect, #products{
+    display: block;
+    width: 100%;
+    height: 100px;
+    border-color: #888;
+    
+}
 
+.orderProductBtn{
+    background: #0064A8;
+    color: #fff;
+}
 
+.orderBtn{
+    height: 33px;
+    border: none;
+    padding: 2px 10px;
+    border-radius: 4px;
+    font-size: 16px;
+}
 
+.submitOrderProductBtn{
+    background: #007bff;
+    color: #ffffff;
+    font-weight: bold;
+}
 
+.marginTop20{
+    margin-top: 20px;
+}
 
+.alignRight{
+    text-align: right;
+}
 
+#orderProductLists{
+    margin-top: 20px;
+}
 
+.productNameSelect{
+    font-size: 20px;
+    background: #FAFAFA;
+    padding: 4px 18px;
+    border: 2 px solid #EDEDED;
+    border-radius: 2px;
+}
 
+div.orderProductRow{
+    padding: 6px;
+    border-bottom: 2px solid #e0e0e0;
+    padding-bottom: 25px;
+    padding-top: 25px;
+    font-size: 18px;
+    border: 3px solid #F2F2F2;
+    border-radius: 5px;
 
+}
 
+.orderProductQty{
+    height: 25px;
+    border: none;
+    background: #EDEDED;
+    text-indent: 10px;
+    border: 5px solid #F2F2F2;
+    border-radius: 5px;
+}
 
+#orderProductLists .row{
+    margin: 0px !important;
+}
 
+.suppliersRows .supplierName{
+    margin-left: 12px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #a1a1a1;
+    text-transform: uppercase;
+    padding-top: 5px;
+}
 
+.appbtn{
+    border: none;
+    padding: 4px 10px;
+    background: #007bff;
+    border-radius: 5px;
 
+}
 
+.removeOrderBtn{
+    background: #007bff;
+    color: #fff;
+    float: right;
+}
 
+.poList{
+    margin-bottom: 25px;
+    padding: 15px;
+    border-bottom: 1px solid #d1d1d1;
+    border-radius: 5px;
+    background: #fbfbfb;
+}
 
+.poList p{
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #000D73;
+    font-size: 16px;
+}
 
+.poList table td, .poList table th{
+    border: none;
+    border-bottom: 1px dotted #a1a1a1;
+}
 
+.poList table td{
+    padding: 13px 14px;
+    font-size: 14.5px;
+}
 
+.poList table th{
+    padding: 13px 10px;
+    font-size: 15px;
 
+}
 
+.poOrderUpdateBtnContainer{
+    margin-top: 20px;
+}
 
+.updatePoBtn{
+    color: #000D73;
+    background: #fff;
+    border: 1px solid #000D73;
+}
 
+.updatePoBtn:hover{
+    
+    color: #fff;
+    background: #000D73;
+}
 
+.po-badge{
+    padding: 4px 6px;
+    border: 1px solid;
+    font-weight: bold;
+/*    background: #8EBFFF;*/
+    
+    
+}
 
+.po-badge-pending{
+    border-color: #000D73;
+    background: #FA95C4;
+    border-radius: 5px;
+}
 
+.po-badge-complete{
+    background: #9FFFA3;
+    border-color: #000D73;
+    border-radius: 5px;
+}
 
+.po-badge-incomplete{
+    background: #FEFFAA;
+    border-color: #000D73;
+    border-radius: 5px;
+}
 
+/*Pie Chart Styling*/
 
+.highcharts-figure,
+.highcharts-data-table table {
+    min-width: 320px;
+    max-width: 800px;
+    margin: 1em auto;
+}
 
+.highcharts-data-table table {
+    font-family: Verdana, sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #ebebeb;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+}
 
+.highcharts-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
 
+.highcharts-data-table th {
+    font-weight: 600;
+    padding: 0.5em;
+}
 
+.highcharts-data-table td,
+.highcharts-data-table th,
+.highcharts-data-table caption {
+    padding: 0.5em;
+}
 
+.highcharts-data-table thead tr,
+.highcharts-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
 
+.highcharts-data-table tr:hover {
+    background: #f1f7ff;
+}
 
+.dashboard_content_main {
+    display: flex;
+    flex-direction: row;
+}
 
-
+.col50 {
+    flex: 1;
+    padding: 10px;
+    box-sizing: border-box;
+}
